worked on nav links and got bottom image to align correctly

--- a/index.css
+++ b/index.css
@@ -1,7 +1,16 @@
-
 * {
     font-size: 62.5%;
 }
+
+nav a{
+    text-decoration: none;
+    color: white;
+}
+
+nav{
+    text-align: center;
+}
+
 
 body{                                 /* adds bacground color to the whole page */
  
@@ -55,7 +64,7 @@ body{                                 /* adds bacground color to the whole page 
     text-decoration: none;
     display: inline-block;
     font-size: 15px;
-    margin: 10%;
+    
     max-width: 90px;
     text-align: center;
 }
@@ -69,7 +78,7 @@ body{                                 /* adds bacground color to the whole page 
     text-decoration: none;
     display: inline-block;
     font-size: 15px;
-    margin: 7%;
+    
 }
 
 .button3{
@@ -80,7 +89,12 @@ body{                                 /* adds bacground color to the whole page 
     text-decoration: none;
     display: inline-block;
     font-size: 15px;
-    margin: 10%;
+    
+}
+
+
+.button1, .button2, .button3{
+    margin: 0 10%;
 }
 
 .fire{
@@ -108,7 +122,11 @@ body{                                 /* adds bacground color to the whole page 
 
 
 .footerimg img{
-    height: 
+    height:200px;
+    width:100%;
+    object-fit: cover;
+    object-position:100% 20%;
+    margin:0 0 3rem 0; 
 }
 
 
@@ -125,3 +143,6 @@ body{                                 /* adds bacground color to the whole page 
     
 }
 
+.navigation nav{
+    margin-bottom: 100px;
+}
